--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,3 +18,15 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+
+
+set -g @plugin 'tmux-plugins/tpm'
+
+# Essential settings
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Restore tmux session
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+run '~/.tmux/plugins/tpm/tpm'
