Install tmux-continuum

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,4 +29,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # Restore tmux session
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+# Save session automaticlly
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
 run '~/.tmux/plugins/tpm/tpm'
