--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,7 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-
+setw -g mouse on
 
 set -g @plugin 'tmux-plugins/tpm'
 
