Add submodule powerline

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".tmux/plugins/tpm"]
 	path = .tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
+[submodule "powerline-shell"]
+	path = powerline-shell
+	url = https://github.com/b-ryan/powerline-shell
