--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,9 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# true color
+set -g default-terminal "xterm-256color"
+
 setw -g mouse on
 
 set -g @plugin 'tmux-plugins/tpm'
