--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,3 +36,11 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+
+# auto start terminal
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'iterm'
+
+# auto restore tmux
+set -g @continuum-restore 'on'
