--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,8 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # true color
-set -g default-terminal "xterm-256color"
+set-option -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",$TERM:Tc"
 
 setw -g mouse on
 
